--- a/list-of-mathstuff.qmd
+++ b/list-of-mathstuff.qmd
@@ -1,6 +1,108 @@
 \providecommand{\Pageref}[1]{\hfill p.\pageref{#1}}
- [**Corollary 1**](#Corollary-1)\Pageref{Corollary-1}
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
 
- [**Definition 2**](#Definition-2)\Pageref{Definition-2}
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
 
- [**Theorem 3**](#hartman-grobman): Hartman-Grobman\Pageref{hartman-grobman}
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
+
+ [**Theorem 1**](2DNonLinearPhasePlane.qmd#Theorem-1)\Pageref{Theorem-1}
+
+ [**Corollary 2**](2DNonLinearPhasePlane.qmd#Corollary-2)\Pageref{Corollary-2}
+
+ [**Corollary 3**](2DNonLinearPhasePlane.qmd#Corollary-3)\Pageref{Corollary-3}
+
+ [**Definition 4**](2DNonLinearPhasePlane.qmd#Definition-4)\Pageref{Definition-4}
+
+ [**Theorem 5**](2DNonLinearPhasePlane.qmd#Theorem-5)\Pageref{Theorem-5}
+
+ [**Definition 6**](2DNonLinearPhasePlane.qmd#Definition-6)\Pageref{Definition-6}
